# opinion_mining

./: .dockerignore  .gitignore  LICENSE  README.md  comment_fetcher.py  comments_database.sqlite  docker-compose.yml  dockerfile  memory_monitor.py  pyproject.toml  sql3.py  test_comments.py
.github/workflows/: ls_build.yml  main.yml  test_build.yml
application/: app.py
application/templates/: index.html  results.html
scrapper/: Sentiment_Analysis.py  comment_fetcher.py  keyword_extract.py  ls_psql.py  rating_system.py  sentiment_analysis.py
src/: analyzer.py  app.py  config.py  models.ipynb  scraper.py
src/templates/: index.html
src/templates/partials/: results.html
