[project]
name = "opinion-mining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask-limiter>=3.10.1",
    "flask>=3.1.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pip>=25.0",
    "praw>=7.8.1",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "transformers>=4.48.2",
    "flask-wtf>=1.2.2",
    "flask-talisman>=1.1.0",
    "tabulate>=0.9.0",
    "psycopg2-binary>=2.9.10",
    "googlesearch-python>=1.3.0",
    "nltk>=3.9.1",
    "keybert>=0.9.0",
    "rank-bm25>=0.2.2",
    "openai>=1.66.2",
]
