[project]
name = "opinion-mining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.1",
    "praw>=7.8.1",
    "ddgs>=9.9.2",
    "sentence-transformers>=5.1.2",
    "transformers>=4.57.3",
    "torch>=2.9.1",
    "scikit-learn>=1.6.1",
    "psycopg2-binary>=2.9.10",
    "openai>=1.66.2",
    "bitsandbytes>=0.49.0",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]